--- a/index.html
+++ b/index.html
@@ -325,11 +325,11 @@ Additionally, SHSC records include data on the number of nights clients spend in
 <div class="collapse-content">
 
 <div class="tab">
-  <button class="tablinks" onclick="openData(event, 'Table')">Table</button>
-  <button class="tablinks" onclick="openData(event, 'Charts')">Charts</button>
+  <button class="tablinks" onclick="openData(event, 'housingaff-table')">Table</button>
+  <button class="tablinks" onclick="openData(event, 'housingaff-charts')">Charts</button>
 </div>
   
-<div id="Table" class="tabcontent">
+<div id="housingaff-table" class="tabcontent">
   
 <table class="normal-table">
 <thead>
@@ -430,7 +430,7 @@ Rest of state – 26.2%</p></td>
 </table>
 </div>
   
-<div id="Charts" class="tabcontent">
+<div id="housingaff-charts" class="tabcontent">
 
 <div class='tableauPlaceholder' id='viz1657401654181' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Housingaffordability&#47;Housingstress&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target4-Housingaffordability&#47;Housingstress' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Housingaffordability&#47;Housingstress&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1657401654181');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='850px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='850px';} else { vizElement.style.width='100%';vizElement.style.height='1000px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
               <br>
@@ -444,11 +444,11 @@ Rest of state – 26.2%</p></td>
 
 
 <div class="tab">
-  <button class="tablinks" onclick="openData(event, 'Table1')">Table</button>
-  <button class="tablinks" onclick="openData(event, 'Charts')">Charts</button>
+  <button class="tablinks" onclick="openData(event, 'housingsupp-table')">Table</button>
+  <button class="tablinks" onclick="openData(event, 'housingsupp-charts')">Charts</button>
 </div>
   
-<div id="Table1" class="tabcontent">
+<div id="housingsupp-table" class="tabcontent">
   
 <table class="normal-table"> 
 <thead>
@@ -509,7 +509,7 @@ Rest of state – 26.2%</p></td>
 
 </div>
 
- <div id="Charts" class="tabcontent">
+ <div id="housingsupp-charts" class="tabcontent">
 <div class='tableauPlaceholder' id='viz1657401670597' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Housingsupply&#47;Housingsupply&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target4-Housingsupply&#47;Housingsupply' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Housingsupply&#47;Housingsupply&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1657401670597');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1377px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
               <br>
             </div>
@@ -520,11 +520,11 @@ Rest of state – 26.2%</p></td>
 
   
 <div class="tab">
-  <button class="tablinks" onclick="openData(event, 'Table')">Table</button>
-  <button class="tablinks" onclick="openData(event, 'Charts')">Charts</button>
+  <button class="tablinks" onclick="openData(event, 'poverty-table')">Table</button>
+  <button class="tablinks" onclick="openData(event, 'poverty-charts')">Charts</button>
 </div>
   
-<div id="Table" class="tabcontent">
+<div id="poverty-table" class="tabcontent">
 
 <table class="normal-table"> 
 <thead>
@@ -573,7 +573,7 @@ Rest of state – 26.2%</p></td>
 </table>
 </div>
 
- <div id="Charts" class="tabcontent">
+ <div id="poverty-charts" class="tabcontent">
 
 <div class='tableauPlaceholder' id='viz1657401684857' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Povertyandunemployment&#47;Povertyandunemployment&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target4-Povertyandunemployment&#47;Povertyandunemployment' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Povertyandunemployment&#47;Povertyandunemployment&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1657401684857');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1027px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
               <br>
@@ -585,11 +585,11 @@ Rest of state – 26.2%</p></td>
 <div class="collapse-content">
 
   <div class="tab">
-  <button class="tablinks" onclick="openData(event, 'Table')">Table</button>
-  <button class="tablinks" onclick="openData(event, 'Charts')">Charts</button>
+  <button class="tablinks" onclick="openData(event, 'youngpeople-table')">Table</button>
+  <button class="tablinks" onclick="openData(event, 'youngpeople-charts')">Charts</button>
 </div>
   
-<div id="Table" class="tabcontent">
+<div id="youngpeople-table" class="tabcontent">
   
   
 <table class="normal-table"> 
@@ -644,7 +644,7 @@ Rest of state – 26.2%</p></td>
 </div>
 
     
-<div id="Charts" class="tabcontent">
+<div id="youngpeople-charts" class="tabcontent">
               <br>
 <div class='tableauPlaceholder' id='viz1657401710789' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Youngpeopleincustodyandoutofhomecare&#47;Youngpeopleincustodyandoutofhomecare&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target4-Youngpeopleincustodyandoutofhomecare&#47;Youngpeopleincustodyandoutofhomecare' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Youngpeopleincustodyandoutofhomecare&#47;Youngpeopleincustodyandoutofhomecare&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1657401710789');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1327px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
               <br><br>
@@ -658,11 +658,11 @@ Rest of state – 26.2%</p></td>
 
   
   <div class="tab">
-  <button class="tablinks" onclick="openData(event, 'Table')">Table</button>
-  <button class="tablinks" onclick="openData(event, 'Charts')">Charts</button>
+  <button class="tablinks" onclick="openData(event, 'health-table')">Table</button>
+  <button class="tablinks" onclick="openData(event, 'health-charts')">Charts</button>
 </div>
   
-<div id="Table" class="tabcontent">
+<div id="health-table" class="tabcontent">
   
 <table class="normal-table"> 
 <thead>
@@ -715,7 +715,7 @@ Rest of state – 26.2%</p></td>
 
 </div>
 
-  <div id="Charts" class="tabcontent">
+  <div id="health-charts" class="tabcontent">
   
            
               <br>
@@ -730,11 +730,11 @@ Rest of state – 26.2%</p></td>
 
   
   <div class="tab">
-  <button class="tablinks" onclick="openData(event, 'Table')">Table</button>
-  <button class="tablinks" onclick="openData(event, 'Charts')">Charts</button>
+  <button class="tablinks" onclick="openData(event, 'alcoholdrugs-table')">Table</button>
+  <button class="tablinks" onclick="openData(event, 'alcoholdrugs-charts')">Charts</button>
 </div>
   
-<div id="Table" class="tabcontent">
+<div id="alcoholdrugs-table" class="tabcontent">
   
 <table class="normal-table"> 
 <thead>
@@ -806,7 +806,7 @@ Rest of state – 26.2%</p></td>
 
 </div>
 
-  <div id="Charts" class="tabcontent">
+  <div id="alcoholdrugs-charts" class="tabcontent">
  
               <br>
 <div class='tableauPlaceholder' id='viz1657401749082' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Alcoholanddruguse&#47;Ratesofalcoholconsumptionandrisk&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target4-Alcoholanddruguse&#47;Ratesofalcoholconsumptionandrisk' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Alcoholanddruguse&#47;Ratesofalcoholconsumptionandrisk&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1657401749082');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='850px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='850px';} else { vizElement.style.width='100%';vizElement.style.height='1400px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
@@ -820,11 +820,11 @@ Rest of state – 26.2%</p></td>
 
    
   <div class="tab">
-  <button class="tablinks" onclick="openData(event, 'Table')">Table</button>
-  <button class="tablinks" onclick="openData(event, 'Charts')">Charts</button>
+  <button class="tablinks" onclick="openData(event, 'dv-table')">Table</button>
+  <button class="tablinks" onclick="openData(event, 'dv-charts')">Charts</button>
 </div>
   
-<div id="Table" class="tabcontent">
+<div id="dv-table" class="tabcontent">
   
   
 <table class="normal-table"> 
@@ -870,7 +870,7 @@ Rest of state – 26.2%</p></td>
 </div>
 
   
-  <div id="Charts" class="tabcontent">
+  <div id="dv-charts" class="tabcontent">
   
               <br>
 <div class='tableauPlaceholder' id='viz1657401762100' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Domesticviolence&#47;Domesticandfamilyviolence&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target4-Domesticviolence&#47;Domesticandfamilyviolence' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Domesticviolence&#47;Domesticandfamilyviolence&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1657401762100');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='1327px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
