--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ Additionally, SHSC records include data on the number of nights clients spend in
 <div class="collapse-content">
 
 <div class="tab">
-  <button class="tablinks" onclick="openData(event, 'housingaff-table')">Table</button>
+  <button class="tablinks" onclick="openData(event, 'housingaff-table')" id="defaultOpen">Table</button>
   <button class="tablinks" onclick="openData(event, 'housingaff-charts')">Charts</button>
 </div>
   
@@ -932,7 +932,9 @@ function openData(evt, datatype) {
   evt.currentTarget.className += " active";
 }
 
-
+// Get the element with id="defaultOpen" and click on it
+document.getElementById("defaultOpen").click();
+  
     </script>
   </body>
 </html>
