--- a/index.html
+++ b/index.html
@@ -49,13 +49,6 @@
                 <a href="#Target-3">
                   <span class="title"><h5>Target 3</h5></span>
                 </a>
-                <ol role="list">
-                  <li>
-                    <a href="#Target-3-Reducing-the-overall-rate-of-homelessness">
-                      <span class="title"><h6>Reducing the overall rate of homelessness</h6></span>
-                    </a>
-                  </li>
-                </ol>
               </li>
               <li>
                 <a href="#Target-4">
@@ -411,7 +404,7 @@ Rest of state – 26.2%</p></td>
 
 
 <div class="tab">
-  <button class="tablinks" onclick="openData(event, 'housingsupp-table')">Table</button>
+  <button class="tablinks" onclick="openData(event, 'housingsupp-table')" id="defaultOpen">Table</button>
   <button class="tablinks" onclick="openData(event, 'housingsupp-charts')">Charts</button>
 </div>
   
