--- a/index.html
+++ b/index.html
@@ -226,8 +226,9 @@
     <div id="Target-1">
         <h2>Target 1</h2>
         <blockquote class="blockquote">
-            <h4><i>Western Australia will have ended all forms of chronic homelessness including chronic rough sleeping</i></h4><br>
+            <h4><i>Western Australia will have ended all forms of chronic homelessness including chronic rough sleeping</i></h4>
         </blockquote>
+        <br>
         <p>The rates of access to SHS reflect the nature of the service system, including the availability and accessibility of services and the types of supports provided. The SHS data indicates that, relative to national rates, Western Australians accessing SHS do so for much shorter support periods and are accommodated for far fewer nights. In 2019-20, the median length of support received was 22 days in Western Australia and 51 days nationally.</p><br>
         <center>
             <table class="normal-table">
@@ -292,8 +293,10 @@
     <div id="Target-3-Reducing-the-overall-rate-of-homelessness">
         <h3>Reducing the overall rate of homelessness</h3>
         <br>
+        <p3>Charts. Overall homelessness statistics and trends</p3>
+        <br>
         <div class='tableauPlaceholder' id='viz1657401623787' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3_16568893002690&#47;RateofhomelessnessinWA&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target3_16568893002690&#47;RateofhomelessnessinWA' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3_16568893002690&#47;RateofhomelessnessinWA&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1657401623787');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='950px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='950px';} else { vizElement.style.width='100%';vizElement.style.height='1900px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-        <br><br><br>
+        <br><br>
         <div class='tableauPlaceholder' id='viz1657308522298' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3-Housingtenureoutcomes&#47;Housingtenureoutcome-Experiencinghomelessness&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target3-Housingtenureoutcomes&#47;Housingtenureoutcome-Experiencinghomelessness' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target3-Housingtenureoutcomes&#47;Housingtenureoutcome-Experiencinghomelessness&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1657308522298');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='800px';vizElement.style.height='850px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         <br><br><br>
     </div>
@@ -630,6 +633,68 @@
     <div id="Target-4-Alcohol-and-drug-use">
         <h3>Alcohol and drug use</h3>
         <br>
+        <p3>Table. Alcohol and drug use statistics and trends</p3>
+        <br>
+         <button type="button" class="collapsible">Alcohol and drug use</button>
+        <div class="tab-content">
+            <table class="normal-table">
+                <thead>
+                <tr>
+                    <th><p>Indicators</p></th>
+                    <th><p>Most current values</p></th>
+                    <th><p>Trend over time</p></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td rowspan="3"><p>Alcohol Consumption in Western Australia, people aged 14 years or older (2019)<sup>1</sup></p></td>
+                    <td><p>Never drunk – 17.7%</p></td>
+                    <td><p>Increasing</p></td>
+                </tr>
+                <tr>
+                    <td><p>Drink daily – 5.0%</p></td>
+                    <td><p>Decreasing</p></td>
+                    </tr>
+                <tr>
+                    <td><p>Ex-drinker – 9.0%</p></td>
+                    <td><p>Decreasing</p></td>
+                </tr>
+                <tr>
+                    <td rowspan="3"><p>Alcohol lifetime risk status, people aged 14 years or older (2019)<sup>1</sup></p></td>
+                    <td><p>Lifetime risk – 17.0%</p></td>
+                    <td><p>Decreasing</p></td>
+                </tr>
+                <tr>
+                    <td><p>Abstainers – 27.0%</p></td>
+                    <td><p>Increasing</p></td>
+                    </tr>
+                <tr>
+                    <td><p>Low risk – 44.4%</p></td>
+                    <td><p>Stable</p></td>
+                </tr>
+                <tr>
+                    <td rowspan="2"><p>Illicit Drug use (2019)<sup>1</sup></p></td>
+                    <td><p>Ever used – 43.0%</p></td>
+                    <td><p>Stable</p></td>
+                </tr>
+                <tr>
+                    <td><p>Used in last 12 months – 16.4%</p></td>
+                    <td><p>Stable</p></td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                <tr>
+                    <td colspan="3">
+                        <p2>
+                            <sup>1</sup>AIHW 2021. Alcohol, tobacco & other drugs in Australia
+                        </p2>
+                    </td>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+        <br>
+        <p3>Charts. Alcohol and drug use statistics and trends</p3>
         <div class='tableauPlaceholder' id='viz1657401749082' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Alcoholanddruguse&#47;Ratesofalcoholconsumptionandrisk&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target4-Alcoholanddruguse&#47;Ratesofalcoholconsumptionandrisk' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target4-Alcoholanddruguse&#47;Ratesofalcoholconsumptionandrisk&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1657401749082');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='850px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='850px';} else { vizElement.style.width='100%';vizElement.style.height='1400px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         <br><br>
     </div>
@@ -691,12 +756,16 @@
     <div id="Target-5-Reducing-Aboriginal-homelessness">
         <h3>Reducing Aboriginal homelessness</h3>
         <br>
+        <p3>Charts. Aboriginal homelessness statistics and trends</p3>
+        <br>
         <div class='tableauPlaceholder' id='viz1657401779217' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target5&#47;RateofhomelessnessinWAinAboriginalandorTorresStraitIslanderpersons&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target5&#47;RateofhomelessnessinWAinAboriginalandorTorresStraitIslanderpersons' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target5&#47;RateofhomelessnessinWAinAboriginalandorTorresStraitIslanderpersons&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1657401779217');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='950px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='950px';} else { vizElement.style.width='100%';vizElement.style.height='1900px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         <br><br>
     </div>
   
     <div id="Target-5-Reducing-regional-homelessness">
         <h3>Reducing regional homelessness</h3>
+        <br>
+        <p3>Charts. Regional homelessness statistics and trends</p3>
         <br>
         <div class='tableauPlaceholder' id='viz1657401788550' style='position: relative'><noscript><a href='#'><img alt=' ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target5-Regional&#47;ProportionofSHSclientsinregionalWA&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='Target5-Regional&#47;ProportionofSHSclientsinregionalWA' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ta&#47;Target5-Regional&#47;ProportionofSHSclientsinregionalWA&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1657401788550');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='800px';vizElement.style.height='850px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='800px';vizElement.style.height='850px';} else { vizElement.style.width='100%';vizElement.style.height='950px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
         <br><br><br>
