--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>Western Australian Alliance to End Homelessness Outcomes Measurement Framework</title>
-<meta charset="utf-8">
-<!-- Load CSS -->
-<link href="css/style.css" rel="stylesheet" type="text/css">
-<!-- Load jQuery library -->
-<script src="scripts/jquery-1.6.2.min.js"></script>
-<!-- Load custom js -->
-<script src="scripts/panelslide.js"></script>
-<script src="scripts/custom.js"></script>
-<!-- Load topcontrol js -->
-<script src="scripts/scrolltopcontrol.js"></script>
-<!-- Load NIVO Slider -->
-<link rel="stylesheet" href="css/nivo-slider.css" type="text/css" media="screen">
-<link rel="stylesheet" href="css/nivo-theme.css" type="text/css" media="screen">
-<script src="scripts/jquery.nivo.slider.pack.js"></script>
-<script src="scripts/nivo-options.js"></script>
-<!-- Load fancybox -->
-<script src="scripts/jquery.fancybox-1.3.4.pack.js"></script>
-<script src="scripts/jquery.easing-1.3.pack.js"></script>
-<script src="scripts/jquery.mousewheel-3.0.4.pack.js"></script>
-<link rel="stylesheet" href="css/jquery.fancybox-1.3.4.css" type="text/css" media="screen">
-  </head>
-
-  <body>
+    <meta charset="utf-8">
+    <!-- Load CSS -->
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <!-- Load jQuery library -->
+    <script src="scripts/jquery-1.6.2.min.js"></script>
+    <!-- Load custom js -->
+    <script src="scripts/panelslide.js"></script>
+    <script src="scripts/custom.js"></script>
+    <!-- Load topcontrol js -->
+    <script src="scripts/scrolltopcontrol.js"></script>
+    <!-- Load NIVO Slider -->
+    <link rel="stylesheet" href="css/nivo-slider.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="css/nivo-theme.css" type="text/css" media="screen">
+    <script src="scripts/jquery.nivo.slider.pack.js"></script>
+    <script src="scripts/nivo-options.js"></script>
+    <!-- Load fancybox -->
+    <script src="scripts/jquery.fancybox-1.3.4.pack.js"></script>
+    <script src="scripts/jquery.easing-1.3.pack.js"></script>
+    <script src="scripts/jquery.mousewheel-3.0.4.pack.js"></script>
+    <link rel="stylesheet" href="css/jquery.fancybox-1.3.4.css" type="text/css" media="screen">
+    <!-- Load collapsible sidebar -->
+    <script src="scripts/jquery-2.1.1.min.js"></script>
+    <script src="scripts/materialize.min.js"></script>
+</head>
+<body>
 <!--This is the START of the menu-->
     <div id="menu-wrapper">
         <div id="main-menu">
@@ -161,7 +163,6 @@
             </ul>
         </div>
     </div>
-</div>
 <!--END of menu-->
 <!--This is the START of the content-->
 <div id="content">
@@ -822,6 +823,9 @@ for (i = 0; i < coll.length; i++) {
       }
       });
       }
+
+$( ".collapsible div" ).mouseover(function() { $(this).trigger('click'); });
+
 </script>
   </body>
 </html>
